# full_stack

./: .env.sample  docker-compose.yml  tree.txt
.devcontainer/backend-container/: devcontainer.json
.devcontainer/frontend-containerr/: devcontainer.json
backend/: Dockerfile
backend/app/: pyproject.toml
backend/app/alembic/: env.py
backend/app/alembic/versions/: 7ef8751cdf6a_initial_migration.py
backend/app/app/: main.py
backend/app/app/api/: api.py
backend/app/app/api/endpoints/: hello.py
backend/app/app/core/: config.py
backend/app/app/db/: engine.py
backend/app/app/models/: hello.py
frontend/: Dockerfile
frontend/app/: next.config.js  package.json
frontend/app/app/hello_backend/: page.tsx
frontend/app/app/hello_db_backend/: page.tsx
frontend/app/app/hello_frontend/: page.tsx
frontend/app/app/hello_frontend_fetch/: page.tsx
frontend/app/app/hello_frontend_state/: page.tsx
frontend/app/app/hello_frontend_state_ng_change/: page.tsx
frontend/app/app/hello_frontend_state_ng_loop/: page.tsx
frontend/app/app/hello_frontend_swr/: page.tsx
frontend/app/app/inventory/products/: page.tsx
frontend/app/app/inventory/products/[id]/: page.tsx
frontend/app/app/inventory/products/sample/: dummy_products.json
frontend/app/app/sample_usestate/: page.tsx
frontend/app/pages/api/: hello.ts
