[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Yuta Sasaki <yutasasaki1219@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.108.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
